# OscarMobility

./: .gitignore  Dockerfile.api  Dockerfile.inventory  Dockerfile.notification  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  requirements.test.txt  requirements.txt  run_inventory_consumer.py  start.sh
app/: __init__.py  config.py  main.py  seed.py
app/api/: dependencies.py  main.py
app/api/routes/: bookings.py  cars.py  payments.py
app/kafka/: __init__.py  consumer.py  producer.py
app/models/: __init__.py  payment.py
app/services/: payment_service.py
consumers/: base_consumer.py  inventory_consumer.py  notification_consumer.py  run_consumer.py
tests/: __init__.py  conftest.py  test_models.py
tests/test_api/: test_booking_endpoints.py
tests/test_kafka/: __init__.py  test_consumers.py  test_producer.py
tests/test_services/: __init__.py  test_payment_service.py
